@@ -1,0 +1,64 @@
+{
+    "display": {
+        "icon": {
+            "item": "silentgear:helmet"
+        },
+        "title": {
+            "translate": "advancements.silentgear.armor.title"
+        },
+        "description": {
+            "translate": "advancements.silentgear.armor.description"
+        }
+    },
+    "parent": "silentgear:blueprint_pickaxe",
+    "criteria": {
+        "helmet": {
+            "trigger": "minecraft:inventory_changed",
+            "conditions": {
+                "items": [
+                    {
+                        "item": "silentgear:helmet"
+                    }
+                ]
+            }
+        },
+        "chestplate": {
+            "trigger": "minecraft:inventory_changed",
+            "conditions": {
+                "items": [
+                    {
+                        "item": "silentgear:chestplate"
+                    }
+                ]
+            }
+        },
+        "leggings": {
+            "trigger": "minecraft:inventory_changed",
+            "conditions": {
+                "items": [
+                    {
+                        "item": "silentgear:leggings"
+                    }
+                ]
+            }
+        },
+        "boots": {
+            "trigger": "minecraft:inventory_changed",
+            "conditions": {
+                "items": [
+                    {
+                        "item": "silentgear:boots"
+                    }
+                ]
+            }
+        }
+    },
+    "requirements": [
+        [
+            "helmet",
+            "chestplate",
+            "leggings",
+            "boots"
+        ]
+    ]
+}
