@@ -1,0 +1,42 @@
+{
+    "display": {
+        "icon": {
+            "item": "silentgear:blueprint_pickaxe"
+        },
+        "title": {
+            "translate": "advancements.silentgear.blueprint_pickaxe.title"
+        },
+        "description": {
+            "translate": "advancements.silentgear.blueprint_pickaxe.description"
+        }
+    },
+    "parent": "silentgear:root",
+    "criteria": {
+        "blueprint": {
+            "trigger": "minecraft:inventory_changed",
+            "conditions": {
+                "items": [
+                    {
+                        "item": "silentgear:blueprint_pickaxe"
+                    }
+                ]
+            }
+        },
+        "template": {
+            "trigger": "minecraft:inventory_changed",
+            "conditions": {
+                "items": [
+                    {
+                        "item": "silentgear:template_pickaxe"
+                    }
+                ]
+            }
+        }
+    },
+    "requirements": [
+        [
+            "blueprint",
+            "template"
+        ]
+    ]
+}
